@@ -40,6 +40,7 @@ class PersonRepositoryTest {
     @InjectMocks
     private PersonRepositoryLiteKeyValue personRepository;
 
+
     @Test
     void shouldInsertPerson(){
         Person person = ada();
@@ -61,9 +62,18 @@ class PersonRepositoryTest {
     void shouldInsertInt(){
         Person person = ada();
         when(template.insert(eq(person))).thenReturn(person);
-        int result = this.personRepository.insertPersonInt(person);
+        var result = this.personRepository.insertPersonInt(person);
         Mockito.verify(template).insert(eq(person));
         Assertions.assertThat(result).isEqualTo(1);
+    }
+
+    @Test
+    void shouldInsertLong(){
+        Person person = ada();
+        when(template.insert(eq(person))).thenReturn(person);
+        var result = this.personRepository.insertPersonLong(person);
+        Mockito.verify(template).insert(eq(person));
+        Assertions.assertThat(result).isEqualTo(1L);
     }
 
     @Test
@@ -90,10 +100,21 @@ class PersonRepositoryTest {
         Person person = ada();
         Set<Person> people = Collections.singleton(person);
         when(template.insert(eq(people))).thenReturn(people);
-        int result = this.personRepository.insertIterableInt(people);
+        var result = this.personRepository.insertIterableInt(people);
         Mockito.verify(template).insert(eq(people));
         Assertions.assertThat(result).isEqualTo(1);
     }
+
+    @Test
+    void shouldInsertPersonIterableLong(){
+        Person person = ada();
+        Set<Person> people = Collections.singleton(person);
+        when(template.insert(eq(people))).thenReturn(people);
+        var result = this.personRepository.insertIterableLong(people);
+        Mockito.verify(template).insert(eq(people));
+        Assertions.assertThat(result).isEqualTo(1);
+    }
+
 
     @Test
     void shouldInsertPersonArray(){
@@ -119,9 +140,19 @@ class PersonRepositoryTest {
         Person person = ada();
         List<Person> people = Collections.singletonList(person);
         when(template.insert(eq(people))).thenReturn(people);
-        int result = this.personRepository.insertArrayInt(new Person[]{person});
+        var result = this.personRepository.insertArrayInt(new Person[]{person});
         Mockito.verify(template).insert(eq(people));
         Assertions.assertThat(result).isEqualTo(1);
+    }
+
+    @Test
+    void shouldInsertPersonArrayLong(){
+        Person person = ada();
+        List<Person> people = Collections.singletonList(person);
+        when(template.insert(eq(people))).thenReturn(people);
+        var result = this.personRepository.insertArrayLong(new Person[]{person});
+        Mockito.verify(template).insert(eq(people));
+        Assertions.assertThat(result).isEqualTo(1L);
     }
 
     @Test
@@ -148,6 +179,16 @@ class PersonRepositoryTest {
         int result = this.personRepository.updatePersonInt(person);
         Mockito.verify(template).update(eq(person));
         Assertions.assertThat(result).isEqualTo(1);
+    }
+
+
+    @Test
+    void shouldUpdateLong(){
+        Person person = ada();
+        when(template.update(eq(person))).thenReturn(person);
+        var result = this.personRepository.updatePersonLong(person);
+        Mockito.verify(template).update(eq(person));
+        Assertions.assertThat(result).isEqualTo(1L);
     }
 
     @Test
@@ -180,6 +221,17 @@ class PersonRepositoryTest {
     }
 
     @Test
+    void shouldUpdatePersonIterableLong(){
+        Person person = ada();
+        Set<Person> people = Collections.singleton(person);
+        when(template.update(eq(people))).thenReturn(people);
+        var result = this.personRepository.updateIterableLong(people);
+        Mockito.verify(template).update(eq(people));
+        Assertions.assertThat(result).isEqualTo(1);
+    }
+
+
+    @Test
     void shouldUpdatePersonArray(){
         Person person = ada();
         List<Person> people = Collections.singletonList(person);
@@ -209,6 +261,16 @@ class PersonRepositoryTest {
     }
 
     @Test
+    void shouldUpdatePersonArrayLong(){
+        Person person = ada();
+        List<Person> people = Collections.singletonList(person);
+        when(template.update(eq(people))).thenReturn(people);
+        var result = this.personRepository.updateArrayLong(new Person[]{person});
+        Mockito.verify(template).update(eq(people));
+        Assertions.assertThat(result).isEqualTo(1);
+    }
+
+    @Test
     void shouldSavePerson(){
         Person person = ada();
         when(template.insert(eq(person))).thenReturn(person);
@@ -229,15 +291,25 @@ class PersonRepositoryTest {
     void shouldSaveInt(){
         Person person = ada();
         when(template.insert(eq(person))).thenReturn(person);
-        int result = this.personRepository.savePersonInt(person);
+        var result = this.personRepository.savePersonInt(person);
         Mockito.verify(template).insert(eq(person));
         Assertions.assertThat(result).isEqualTo(1);
     }
 
     @Test
+    void shouldSaveLong(){
+        Person person = ada();
+        when(template.insert(eq(person))).thenReturn(person);
+        var result = this.personRepository.savePersonLong(person);
+        Mockito.verify(template).insert(eq(person));
+        Assertions.assertThat(result).isEqualTo(1);
+    }
+
+
+    @Test
     void shouldSavePersonIterable(){
         Person person = ada();
-        List<Person> people = List.of(person);
+        Set<Person> people = Collections.singleton(person);
         when(template.insert(eq(people))).thenReturn(people);
         Iterable<Person> result = this.personRepository.saveIterable(people);
         assertThat(result).isNotNull().contains(person);
@@ -247,7 +319,7 @@ class PersonRepositoryTest {
     @Test
     void shouldSavePersonIterableVoid(){
         Person person = ada();
-        List<Person> people = Collections.singletonList(person);
+        Set<Person> people = Collections.singleton(person);
         when(template.insert(eq(people))).thenReturn(people);
         this.personRepository.saveIterableVoid(people);
         Mockito.verify(template).insert(eq(people));
@@ -256,9 +328,19 @@ class PersonRepositoryTest {
     @Test
     void shouldSavePersonIterableInt(){
         Person person = ada();
-        List<Person> people = List.of(person);
+        Set<Person> people = Collections.singleton(person);
         when(template.insert(eq(people))).thenReturn(people);
-        int result = this.personRepository.saveIterableInt(people);
+        var result = this.personRepository.saveIterableInt(people);
+        Mockito.verify(template).insert(eq(people));
+        Assertions.assertThat(result).isEqualTo(1);
+    }
+
+    @Test
+    void shouldSavePersonIterableLong(){
+        Person person = ada();
+        Set<Person> people = Collections.singleton(person);
+        when(template.insert(eq(people))).thenReturn(people);
+        var result = this.personRepository.saveIterableLong(people);
         Mockito.verify(template).insert(eq(people));
         Assertions.assertThat(result).isEqualTo(1);
     }
@@ -266,7 +348,7 @@ class PersonRepositoryTest {
     @Test
     void shouldSavePersonArray(){
         Person person = ada();
-        List<Person> people = List.of(person);
+        List<Person> people = Collections.singletonList(person);
         when(template.insert(eq(people))).thenReturn(people);
         Person[] result = this.personRepository.saveArray(new Person[]{person});
         assertThat(result).isNotNull().contains(person);
@@ -276,7 +358,7 @@ class PersonRepositoryTest {
     @Test
     void shouldSavePersonArrayVoid(){
         Person person = ada();
-        List<Person> people = List.of(person);
+        List<Person> people = Collections.singletonList(person);
         when(template.insert(eq(people))).thenReturn(people);
         this.personRepository.saveArrayVoid(new Person[]{person});
         Mockito.verify(template).insert(eq(people));
@@ -285,9 +367,19 @@ class PersonRepositoryTest {
     @Test
     void shouldSavePersonArrayInt(){
         Person person = ada();
-        List<Person> people = List.of(person);
+        List<Person> people = Collections.singletonList(person);
         when(template.insert(eq(people))).thenReturn(people);
-        int result = this.personRepository.saveArrayInt(new Person[]{person});
+        var result = this.personRepository.saveArrayInt(new Person[]{person});
+        Mockito.verify(template).insert(eq(people));
+        Assertions.assertThat(result).isEqualTo(1);
+    }
+
+    @Test
+    void shouldSavePersonArrayLong(){
+        Person person = ada();
+        List<Person> people = Collections.singletonList(person);
+        when(template.insert(eq(people))).thenReturn(people);
+        var result = this.personRepository.saveArrayLong(new Person[]{person});
         Mockito.verify(template).insert(eq(people));
         Assertions.assertThat(result).isEqualTo(1);
     }
@@ -310,10 +402,19 @@ class PersonRepositoryTest {
     @Test
     void shouldDeleteInt(){
         Person person = ada();
-        int result = this.personRepository.deletePersonInt(person);
+        var result = this.personRepository.deletePersonInt(person);
         Mockito.verify(template).delete(person.getId());
         Assertions.assertThat(result).isEqualTo(1);
     }
+
+    @Test
+    void shouldDeleteLong(){
+        Person person = ada();
+        var result = this.personRepository.deletePersonLong(person);
+        Mockito.verify(template).delete(person.getId());
+        Assertions.assertThat(result).isEqualTo(1);
+    }
+
 
     @Test
     void shouldDeletePersonIterable(){
@@ -336,10 +437,20 @@ class PersonRepositoryTest {
     void shouldDeletePersonIterableInt(){
         Person person = ada();
         Set<Person> people = Collections.singleton(person);
-        int result = this.personRepository.deleteIterableInt(people);
+        var result = this.personRepository.deleteIterableInt(people);
         Mockito.verify(template).delete(person.getId());
         Assertions.assertThat(result).isEqualTo(1);
     }
+
+    @Test
+    void shouldDeletePersonIterableLong(){
+        Person person = ada();
+        Set<Person> people = Collections.singleton(person);
+        var result = this.personRepository.deleteIterableLong(people);
+        Mockito.verify(template).delete(person.getId());
+        Assertions.assertThat(result).isEqualTo(1);
+    }
+
 
     @Test
     void shouldDeletePersonArray(){
@@ -359,9 +470,17 @@ class PersonRepositoryTest {
     @Test
     void shouldDeletePersonArrayInt(){
         Person person = ada();
-        int result = this.personRepository.deleteArrayInt(new Person[]{person});
+        var result = this.personRepository.deleteArrayInt(new Person[]{person});
         Mockito.verify(template).delete(person.getId());
         Assertions.assertThat(result).isEqualTo(1);
+    }
+
+    @Test
+    void shouldDeletePersonArrayLong(){
+        Person person = ada();
+        var result = this.personRepository.deleteArrayLong(new Person[]{person});
+        Mockito.verify(template).delete(person.getId());
+        Assertions.assertThat(result).isEqualTo(1L);
     }
 
     private static Person ada() {
